--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 
-<!-- {% block styles %}{% endblock %} -->
+{% block styles %}<link rel="stylesheet" href="{{ url_for('static', filename='css/resume.css') }}">{% endblock %}
+<!-- {% block javascript %}{% endblock %} -->
 {% block title %}Resume{% endblock %}
 {% block header %}Resume{% endblock %}
 {% block content %}
-  <div style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/tristabug/resume/blob/main/ClarkSResume_ContactInfoFree.pdf&embedded=true" style="width:100%; height:100%; border:none;"></iframe>
-  </div>
+  <div>
+    <iframe id="resume-pdf" src="https://docs.google.com/gview?url=https://github.com/tristabug/SaraClarks-Portfolio/raw/preprod/ClarkSResume_ContactInfoFree.pdf&embedded=true&embedded=true" frameborder="0"></iframe>
+  </body>
 {% endblock %}
