Remove references and add projects. Update routing and nav.

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 <!-- {% block styles %}{% endblock %} -->
-{% block title %}References{% endblock %}
-{% block header %}References{% endblock %}
+{% block title %}Projects{% endblock %}
+{% block header %}Projects{% endblock %}
 {% block content %}
     <p>I'll upload these soon.</p>
 {% endblock %}
