--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,9 @@
         <ul> 
             <li id="site-name">Sara Clark's Portfolio</li>
             <li><a href="/">Home</a></li> 
-            <li><a href="/resume">Resume</a></li> 
-            <li><a href="/references">References</a></li> 
-            <li><a href="/lors">LORs</a></li> 
+            <li><a href="/resume">Resume</a></li>
+            <li><a href="/lors">LORs</a></li>  
+            <li><a href="/projects">Projects</a></li> 
         </ul> 
     </div>
     <div id="header"><h3>{% block header %}{% endblock %}</h3></div>
