--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,7 +17,7 @@ a:hover {
     color: purple;
 }
 
-#nav {
+/* #nav {
     width: 100%;
     float: left;
 }
@@ -29,15 +29,14 @@ a:hover {
 #nav li {
     float: left;
     width: 10%;
-}
+} */
 
 #site-name {
-    width: 40% !important;
-    font-size: 200%;
+    font-size: 150%;
     color: purple;
 }
 
-#nav li > a {
+/* #nav li > a {
     display: inline-block;
     width: 100%;
     padding: 0.3em, 0.3em, 0.3em, 0.3em;
@@ -53,7 +52,7 @@ a:hover {
 #nav li > a:hover {
     background-color: purple;
     color: white;
-}
+} */
 
 #header {
     width: 100%;
