--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,13 @@
 /* styles for entire website */
-html {
-    padding: 1em;
+
+/* global colors */
+:root {
+    --main: purple;
 }
 
-body {
-    width: 100%;
+#site-name {
+    font-size: 150%;
+    color: var(--main);
 }
 
 a {
@@ -14,55 +17,7 @@ a {
 }
 
 a:hover {
-    color: purple;
-}
-
-/* #nav {
-    width: 100%;
-    float: left;
-}
-
-#nav ul {
-    list-style: none;
-}
-
-#nav li {
-    float: left;
-    width: 10%;
-} */
-
-#site-name {
-    font-size: 150%;
-    color: purple;
-}
-
-/* #nav li > a {
-    display: inline-block;
-    width: 100%;
-    padding: 0.3em, 0.3em, 0.3em, 0.3em;
-    margin-top: .5em;
-    text-align: center;
-    color: black;
-    text-decoration: none;
-    font-weight: bold;
-    box-sizing: border-box;
-    transition: all .1s ease-in-out;
-} 
-
-#nav li > a:hover {
-    background-color: purple;
-    color: white;
-} */
-
-#header {
-    width: 100%;
-    margin: 0em 2.5em;
-    padding-top: 4em;
-}
-
-#content {
-    width: 100%;
-    margin: 0em 2.5em;
+    color: var(--main);
 }
 
 #footer {
