--- a/templates/base.html
+++ b/templates/base.html
@@ -12,9 +12,11 @@
   </head>
   <body>
     {% include 'nav.html' %}
-    <div id="header"><h3>{% block header %}{% endblock %}</h3></div>
-    <div id="content">
-      {% block content %}{% endblock %}
+    <div class="container-fluid">
+      <div id="header"><h3>{% block header %}{% endblock %}</h3></div>
+      <div id="content">
+        {% block content %}{% endblock %}
+      </div>
     </div>
     <div id="footer">
         <p>&copy; Copyright 2024 by <a href="">Sara Clark</a>.</p>
