Add skills to resume page.

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -3,6 +3,10 @@
     min-height: 200px;
 }
 
+#skills{
+    margin-bottom: 3em;
+}
+
 div.scroll-container {
     background-color: var(--main);
     overflow: auto;
