--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
-{% block styles %}<link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">{% endblock %}
+{% block styles %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+{% endblock %}
 {% block title %}Home{% endblock %}
 {% block content %}
 <div class="row pt-3 pb-4">
@@ -36,11 +38,5 @@
         <img src="static/assets/miniProfilePhoto.jpg" alt="Mountains">
     </div>
 </div>
-
-
-
-
-
-
 
 {% endblock %}
