--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,12 +2,12 @@
 
 {% block javascript %}<script src="static/javascript/base.js"></script>{% endblock %}
 {% block styles %}{% endblock %}
-{% block title %}Projects{% endblock %}
+{% block title %}Contact{% endblock %}
 {% block content %}
-    <div id="current-page" style="display: none;">#projects</div>
+    <div id="current-page" style="display: none;">#contact</div>
     <div class="row pb-4">
         <div class="col-2"></div>
-        <div class="col-7">All my cool projects.</div>
+        <div class="col-7">All my contacts.</div>
         <div class="col-2 flex-column ms-auto">{% include 'nav.html' %}</div>
     </div>
 {% endblock %}
