--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,22 @@
 <!doctype html>
 <html lang="en">
   <head>
-        {% block styles %}{% endblock %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="static/javascript/base.js"></script>
+        {% block javascript %}{% endblock %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+        {% block styles %}{% endblock %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Sara Clark - {% block title %}{% endblock %}</title>
   </head>
   <body>
-    {% include 'nav.html' %}
     <div class="container-fluid">
-      <h3>{% block header %}{% endblock %}</h3>
-      {% block content %}{% endblock %}
-      <div id="footer">
-          <p>&copy; Copyright 2024 by <a href="">Sara Clark</a>.</p>
-      </div>
+        {% block content %}{% endblock %}
+        <div id="footer">
+            <p>&copy; Copyright 2024 by <a href="">Sara Clark</a>.</p>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
