--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,21 +1,28 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-white">
     <div class="container-fluid">
-      <a class="navbar-brand" id="site-name" href="/">Sara Clark's Portfolio</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="/resume">Resume</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/lors">LORs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/projects">Projects</a>
-          </li>
+        <ul class="navbar-nav flex-column ms-auto lh-1 text-end">
+            <li class="mb-2">
+                <a href="https://github.com/tristabug" target="_blank"><img src="static/assets/github.svg" alt="My Github Account" /></a>
+                <a href="www.linkedin.com/in/tristabug" target="_blank"><img src="static/assets/linkedin.svg" alt="My LinkedIn Account" /></a>
+            </li>
+            <li class="nav-item" id="home">
+                <a class="nav-link active" id="site-name" href="/">SC</a>
+            </li>
+            <li class="nav-item" id="contact">
+                <a class="nav-link" href="/contact">contact</a>
+            </li>
+            <li class="nav-item" id="resume">
+                <a class="nav-link" href="/resume">resume</a>
+            </li>
+            <li class="nav-item" id="projects">
+                <a class="nav-link" href="/projects">projects</a>
+            </li>
         </ul>
       </div>
     </div>
-  </nav>
+</nav>
+
