--- a/templates/home.html
+++ b/templates/home.html
@@ -5,14 +5,14 @@
 {% block title %}Home{% endblock %}
 {% block content %}
     <div id="current-page" style="display: none;">#home</div>
-    <div class="row pb-4">
+    <div class="row pt-4 pb-4">
         <div class="col-2"></div>
         <div class="col-4 pt-5">
-            <p class="lh-1"><span id="about-me-header">Hi! My name is</span></br>
-            <span id="about-me-name">Sara Clark.</span></br>
-            <span id="about-me-subtitle">I'm a Software & App Developer.</span></p>
-            <p class="about-me-text">After two years in tech, I'd say what I really do is solve problems in creative ways with applicable technologies.</br>
-            <span class="text-center" id="about-me-oneliner">I absolutely love what I do.</span></br>
+            <p class="lh-1"><span class="about-header">Hi! My name is</span></br>
+            <span class="header">Sara Clark.</span></br>
+            <span class="subheader">I'm a Software & App Developer.</span></p>
+            <p class="main-text">After two years in tech, I'd say what I really do is solve problems in creative ways with applicable technologies.</br>
+            <span class="text-center oneliner">I absolutely love what I do.</span></br>
             I started later in life, making a career pivot in my 30s to pursue software and app development. I enjoy the life-long pursuit of knowledge that development demands, and the constant challenges it brings.</p>
         </div>
         <div class="col-3">
