--- a/templates/projects.html
+++ b/templates/projects.html
@@ -5,7 +5,7 @@
 {% block title %}Projects{% endblock %}
 {% block content %}
     <div id="current-page" style="display: none;">#projects</div>
-    <div class="row pb-4">
+    <div class="row pt-4 pb-4">
         <div class="col-2"></div>
         <div class="col-7">All my cool projects.</div>
         <div class="col-2 flex-column ms-auto">{% include 'nav.html' %}</div>
