--- a/static/css/skills.css
+++ b/static/css/skills.css
@@ -12,15 +12,7 @@
 }
 
 .skill-set {
-    background-color: #80008060;;
-}
-
-.methodology {
-    background-color: #80008040;
-}
-
-.CMS {
-    background-color: #80008020;
+    background-color: #80008040;;
 }
 
 .skill-name {
@@ -40,4 +32,10 @@
     font-style: italic;
     font-weight: lighter;
     font-size: 80%;
+}
+
+.skills-row {
+    background-color: var(--main);
+    overflow: auto;
+    width: 100%;
 }
