--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,13 +15,13 @@
             <span class="header">contact me</span></br>
             <span class="subheader">for work inquires </br> to say hello</span></p>
             <div class="row">
-                <div class="col about-header"><a href="www.linkedin.com/in/tristabug" target="_blank"><img src="static/assets/linkedin.svg" alt="My LinkedIn Account" /></a> find me on LinkedIn</div>
+                <div class="col about-header"><a href="www.linkedin.com/in/tristabug" target="_blank"><img src="static/assets/linkedin.svg" alt="My LinkedIn Account" /> Find me on LinkedIn.</a></div>
             </div>
-            <div class="row">
-                <div class="col about-header"><a href="https://github.com/tristabug" target="_blank"><img src="static/assets/github.svg" alt="My Github Account" /></a> check me out on Github</div>
+            <div class="row pt-1">
+                <div class="col about-header"><a href="https://github.com/tristabug" target="_blank"><img src="static/assets/github.svg" alt="My Github Account" /> Check me out on Github.</a></div>
             </div>
-            <div class="row">
-                <div class="col about-header"><img src="static/assets/arrow-down-short.svg" alt="Arrow pointing to form." /> Or send me an email with the form below</div>
+            <div class="row pt-1">
+                <div class="col about-header" style="font-weight:bold;"><img src="static/assets/arrow-down-short.svg" alt="Arrow pointing to form." /> Send me an email with the form below.</div>
             </div>
         </div>
         <div class="col-2 flex-column ms-auto">{% include 'nav.html' %}</div>
@@ -30,25 +30,7 @@
         <div class="col-4"></div>
         <div class="col-6">
             <div class="row shadow-box rounded-start align-items-center" style="background-color:var(--main);margin-left:1em;height:300px;">
-                <form class="form-control-sm">
-                    <div class="form-group row mb-1">
-                        <div class="col-3 align-content-center text-end"><label for="email-name">Name:</label></div>
-                        <input type="text" class="col form-control d-flex justify-content-start" id="email-name">
-                    </div>
-                    <div class="form-group row mb-1">
-                        <div class="col-3 align-content-center text-end"><label for="email-address">Email:</label></div>
-                        <input type="email" class="col form-control d-flex justify-content-start" id="email-address" aria-describedby="emailHelp" placeholder="">
-                    </div>
-                    <div class="form-group row mb-1">
-                        <div class="col-3 align-content-center text-end"><label for="email-subject">Subject:</label></div>
-                        <input type="text" class="col form-control d-flex justify-content-start" id="email-subject" placeholder="">
-                    </div>
-                    <div class="form-group row mb-1">
-                        <div class="col-3 text-end"><label for="email-message">Message:</label></div>
-                        <textarea class="col form-control d-flex justify-content-start" id="email-message" rows="3"></textarea>
-                    </div>
-                    <button type="submit" class="btn my-btn btn-sm float-right">Submit</button>
-                </form>
+                {% include 'contact_form.html' %}
             </div>
         </div>
         <div class="col-2"><div class="row shadow-box" style="background-color:var(--main);height:300px;"></div></div>
