--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,13 +1,35 @@
 {% extends "base.html" %}
 
 {% block javascript %}<script src="static/javascript/base.js"></script>{% endblock %}
-{% block styles %}{% endblock %}
+{% block styles %}<link rel="stylesheet" href="{{ url_for('static', filename='css/projects.css') }}">{% endblock %}
 {% block title %}Projects{% endblock %}
 {% block content %}
     <div id="current-page" style="display: none;">#projects</div>
-    <div class="row pt-4 pb-4">
-        <div class="col-2"></div>
-        <div class="col-7">All my cool projects.</div>
+    <div class="row pt-4">
+        <div class="col-2" style="padding:0;margin:0;">
+            <p class="lh-1 header" style="height:100px;border-bottom: solid var(--main) 4px;"></p>
+            <p class="lh-1 subheader"></p>
+        </div>
+        <div class="col-8 pt-5" style="padding-left:0;padding-right:0;margin:0;">
+            <p class="lh-1 header p-0 m-0" style="border-bottom: solid var(--main) 4px;">projects</p>
+            <p class="lh-1 subheader p-0 m-0">just some of my favorites</p>
+        </div>
         <div class="col-2 flex-column ms-auto">{% include 'nav.html' %}</div>
+    </div>
+    <div class="row">
+        <div class="col-2"></div>
+        <div class="col-8 p-0 m-0">
+            <div class="row">
+                {% for project in projects %}
+                    <div class="project-container">
+                        <img src={{ project['visuals']['thumb']['file'] }} alt="{{ project['visuals']['thumb']['desc'] }}" class="image">
+                        <div class="project-overlay">
+                            <p class="text lh-1"><span style="font-size:110%;font-weight:bold;">{{ project['name'] }}</span></br>{{ project['type'] }}</p>
+                        </div>
+                    </div>
+                {%endfor%} 
+            </div>
+        </div>
+        <div class="col-2"></div>
     </div>
 {% endblock %}
