--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,15 +1,1 @@
-#project-slider {
-    margin-bottom: 3em;
-    min-height: 200px;
-}
-
-div.scroll-container {
-    background-color: var(--main);
-    overflow: auto;
-    white-space: nowrap;
-  }
-  
-div.scroll-container img {
-    width: 200px;
-    height: 200px;
-}
+/* home page styles */
