--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 
 {% block javascript %}<script src="static/javascript/nav.js"></script>{% endblock %}
-{% block styles %}<link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">{% endblock %}
+{% block styles %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/projects.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/slider.css') }}">
+{% endblock %}
 {% block title %}Home{% endblock %}
 {% block content %}
     <div id="current-page" style="display: none;">#home</div>
@@ -23,19 +27,16 @@
     <div class="row">
         <div class="col text-end"><h5><a href="/projects">projects</a></h5></div>
     </div>
-    <div class="row" id="project-slider">
+    <div class="row project-slider">
         <div class="scroll-container">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Cinque Terre">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Forest">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Northern Lights">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Mountains">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Mountains">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Mountains">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Mountains">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Mountains">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Mountains">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Mountains">
-            <img src="static/assets/miniProfilePhoto.jpg" alt="Mountains">
+            {% for project in projects %}
+                <div class="project-container">
+                    <img src={{ project['visuals']['thumb']['file'] }} alt="{{ project['visuals']['thumb']['desc'] }}" class="image">
+                    <div class="project-overlay">
+                        <p class="text lh-1"><span style="font-size:110%;font-weight:bold;">{{ project['name'] }}</span></br>{{ project['type'] }}</p>
+                    </div>
+                </div>
+            {%endfor%} 
         </div>
     </div>
 {% endblock %}
