Add routes for showing a single project.

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block javascript %}<script src="static/javascript/base.js"></script>{% endblock %}
+{% block javascript %}<script src="/static/javascript/base.js"></script>{% endblock %}
 {% block styles %}{% endblock %}
 {% block title %}Contact{% endblock %}
 {% block content %}
@@ -15,7 +15,7 @@
             <span class="header">contact me</span></br>
             <span class="subheader">for work inquires </br> to say hello</span></p>
             <div class="row">
-                <div class="col about-header"><a href="www.linkedin.com/in/tristabug" target="_blank"><img src="static/assets/linkedin.svg" alt="My LinkedIn Account" /> Find me on LinkedIn.</a></div>
+                <div class="col about-header"><a href="https://www.linkedin.com/in/tristabug" target="_blank"><img src="static/assets/linkedin.svg" alt="My LinkedIn Account" /> Find me on LinkedIn.</a></div>
             </div>
             <div class="row pt-1">
                 <div class="col about-header"><a href="https://github.com/tristabug" target="_blank"><img src="static/assets/github.svg" alt="My Github Account" /> Check me out on Github.</a></div>
