--- a/templates/nav.html
+++ b/templates/nav.html
@@ -6,8 +6,8 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav flex-column ms-auto lh-1 text-end">
             <li class="mb-2">
-                <a href="https://github.com/tristabug" target="_blank"><img src="static/assets/github.svg" alt="My Github Account" /></a>
-                <a href="www.linkedin.com/in/tristabug" target="_blank"><img src="static/assets/linkedin.svg" alt="My LinkedIn Account" /></a>
+                <a href="https://github.com/tristabug" target="_blank"><img src="/static/assets/github.svg" alt="My Github Account" /></a>
+                <a href="https://www.linkedin.com/in/tristabug" target="_blank"><img src="/static/assets/linkedin.svg" alt="My LinkedIn Account" /></a>
             </li>
             <li class="nav-item" id="home">
                 <a class="nav-link active" id="site-name" href="/">SC</a>
