--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block javascript %}<script src="static/javascript/base.js"></script><script src="static/javascript/resume.js"></script>{% endblock %}
+{% block javascript %}<script src="/static/javascript/base.js"></script><script src="/static/javascript/resume.js"></script>{% endblock %}
 {% block styles %}<link rel="stylesheet" href="{{ url_for('static', filename='css/resume.css') }}"><link rel="stylesheet" href="{{ url_for('static', filename='css/skills.css') }}">{% endblock %}
 {% block title %}Resume{% endblock %}
 {% block content %}
