--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block javascript %}<script src="static/javascript/nav.js"></script>{% endblock %}
+{% block javascript %}<script src="/static/javascript/nav.js"></script>{% endblock %}
 {% block styles %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/projects.css') }}">
