--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block javascript %}<script src="static/javascript/base.js"></script>{% endblock %}
+{% block javascript %}<script src="/static/javascript/base.js"></script>{% endblock %}
 {% block styles %}<link rel="stylesheet" href="{{ url_for('static', filename='css/projects.css') }}">{% endblock %}
 {% block title %}Projects{% endblock %}
 {% block content %}
@@ -21,12 +21,15 @@
         <div class="col-8 p-0 m-0">
             <div class="row">
                 {% for project in projects %}
-                    <div class="project-container">
-                        <img src={{ project['visuals']['thumb']['file'] }} alt="{{ project['visuals']['thumb']['desc'] }}" class="image">
-                        <div class="project-overlay">
-                            <p class="text lh-1"><span style="font-size:110%;font-weight:bold;">{{ project['name'] }}</span></br>{{ project['type'] }}</p>
+                        <div class="project-container">
+                            <img src={{ project['visuals']['thumb']['file'] }} alt="{{ project['visuals']['thumb']['desc'] }}" class="image">
+                            <a href="/project/{{ project['id'] }}">
+                                <div class="project-overlay">
+                                    <p class="text lh-1"><span style="font-size:110%;font-weight:bold;">{{ project['name'] }}</span></br>{{ project['type'] }}</p>
+                                </div>
+                            </a>
                         </div>
-                    </div>
+                    
                 {%endfor%} 
             </div>
         </div>
