--- a/templates/project.html
+++ b/templates/project.html
@@ -7,13 +7,26 @@
     <div id="current-page" style="display: none;">#projects</div>
     <div class="row pt-4">
         <div class="col-2" style="padding:0;margin:0;">
-            <p class="lh-1 header" style="height:100px;border-bottom: solid var(--main) 4px;"></p>
+            <p class="header" style="height:124px;border-bottom: solid var(--main) 4px;"></p>
             <p class="lh-1 subheader"></p>
         </div>
         <div class="col-8 pt-5" style="padding-left:0;padding-right:0;margin:0;">
-            <p class="lh-1 header p-0 m-0" style="border-bottom: solid var(--main) 4px;">{{ project['name'] }}</p>
-            <p class="lh-1 subheader p-0 m-0">{{ project['description'] }}</p>
-            <img src={{ project['visuals']['thumb']['file'] }} alt="{{ project['visuals']['thumb']['desc'] }}">
+            <p class="header p-0 m-0" style="border-bottom: solid var(--main) 4px;">{{ project['name'] }}</p>
+            <div class="row project-fv-description">
+                <div class="col project-fv">
+                    <img src="{{ project['visuals']['main']['file'] }}" class="rounded" alt="{{ project['visuals']['main']['desc'] }}">
+                </div>
+                <div class="col">
+                    <p><span style="font-size:150%;">{{ project['type'] }}</span></br>
+                    {% for spec in project['specs'] %}
+                        <span class="spec rounded">{{ spec }}</span>
+                    {%endfor%}
+                    </p>
+                    <p><span style="font-weight:bold;">Description </span></br><span>{{ project['description'] }}</span></p>
+                    <p><span style="font-weight:bold;">Challenges </span></br><span>{{ project['challenges'] }}</span></p>
+                    <p><span style="font-weight:bold;">Learned </span></br><span>{{ project['learned'] }}</span></p>
+                </div>
+            </div>
         </div>
         <div class="col-2 flex-column ms-auto">{% include 'nav.html' %}</div>
     </div>
